Initial Travis CI setup

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,11 @@ pip-log.txt
 .coverage
 .tox
 
-#Translations
+# Translations
 *.mo
 
-#Mr Developer
+# Mr Developer
 .mr.developer.cfg
+
+# Node modules / scripts
+node_modules
