--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ node_js:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - npm install --quiet -g karma
+script:
+  - karma start ./rendr/test/client/karma.conf.js --log-level=disable --single-run --browsers=Firefox --reporters=dots
